# inceptool

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cliff.toml  clippy.toml  deny.toml  flake.nix  package.nix  release-plz.toml  rust-toolchain.toml  update_output.txt
.github/workflows/: cargo-lock-update.yml  ci.yml  coverage.yml  flake-lock-update.yml  release-binaries.yml  release-plz.yml
crates/corpus-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/corpus-parser/src/: error.rs  ident.rs  lib.rs  parser.rs  types.rs
crates/corpus-parser/tests/: parses_fixtures.rs
crates/corpus-parser/tests/fixtures/error_case/: case.tests
crates/corpus-parser/tests/fixtures/escaped_delimiters/: case.tests
crates/corpus-parser/tests/fixtures/multi_group_pipeline/: 03_pipelines.tests
crates/corpus-parser/tests/fixtures/truncated_case/: case.tests
crates/driver-claude/: CHANGELOG.md  Cargo.toml  README.md
crates/driver-claude/src/: driver.rs  error.rs  lib.rs  types.rs
crates/driver-gemini/: CHANGELOG.md  Cargo.toml  README.md
crates/driver-gemini/src/: driver.rs  error.rs  lib.rs  types.rs
crates/engine/: CHANGELOG.md  Cargo.toml  README.md
crates/engine/src/: error.rs  lib.rs  registry.rs  stage.rs
crates/parable/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
crates/parable/corpus/: 00_empty.tests  01_words.tests  02_commands.tests  03_pipelines.tests  04_lists.tests  05_redirects.tests  06_compound.tests  07_if_expr.tests  08_loops.tests  09_case.tests  14_here_documents.tests
crates/parable/src/: error.rs  lexer.rs  lib.rs  rules.rs  stream.rs  taint.rs  types.rs
crates/parable/src/lexer/: heredoc.rs  mod.rs  operator.rs  traits.rs  word.rs
crates/parable/src/parser/: case.rs  command.rs  control_flow.rs  grouping.rs  mod.rs  redirect.rs  word.rs
crates/parable/src/stream/: mod.rs  tests.rs  traits.rs
crates/parable/src/types/: lexer.rs  mod.rs  redirect.rs  spanned.rs
crates/parable/src/types/expr/: fmt.rs  mod.rs
crates/parable/src/types/statement/: fmt.rs  mod.rs
crates/parable/src/types/token/: fmt.rs  mod.rs
crates/parable/tests/: integration_tests.rs
crates/parsers/: CHANGELOG.md  Cargo.toml  README.md
crates/parsers/src/: flake_lock.rs  lib.rs  pre_commit.rs
crates/protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/protocol/src/: driver.rs  error.rs  input.rs  lib.rs  output.rs  session.rs  tool_input.rs  types.rs
crates/risk-data/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/risk-data/src/: entry.rs  error.rs  lib.rs
crates/risk-data/src/codegen/: command.rs  mod.rs  render.rs  rule.rs  scanner.rs
crates/risk-data/src/types/: combo_rule.rs  command.rs  flag.rs  grammar.rs  mod.rs  operand_rule.rs  platform.rs  rating.rs
crates/stages/: CHANGELOG.md  Cargo.toml  README.md
crates/stages/src/: flake_lock.rs  lib.rs  path_utils.rs  pre_commit.rs  pre_commit_runner.rs  read_write_guard.rs  rtk.rs
crates/stages/src/read_write_guard/: access.rs  glob.rs  mod.rs  rule.rs  rule_set.rs  types.rs
crates/stages/tests/fixtures/pre_commit_local_repo/: .pre-commit-config.yaml
src/: cli.rs  config.rs  logging.rs  main.rs  output.rs  registry.rs
src/config/: base.toml  error.rs  mod.rs  raw_config.rs
src/config/raw_config/: access.rs  mod.rs  raw_hook_config.rs  read_write_guard_raw_config.rs  rule.rs
tests/: integration_test.rs
tests/snapshots/: integration_test__integration_happy_path@claude_rtk_rewrite.snap  integration_test__integration_happy_path@gemini_rtk_rewrite.snap
