[package]
name = "inceptool"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "An extensible LLM agent hook architecture"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agents", "hooks", "ai"]
categories = ["development-tools"]

[workspace.package]
edition = "2024"
authors = ["Mikalai Seva"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/inceptool"

[workspace]
members = [
    "crates/driver-claude",
    "crates/driver-gemini",
    "crates/engine",
    "crates/protocol",
    "crates/stages",
]

[workspace.dependencies]
directories = "6.0"
flash = "0.0"
inceptool_driver-claude = { package = "inceptool-driver-claude", path = "crates/driver-claude", version = "0.9" }
inceptool_driver-gemini = { package = "inceptool-driver-gemini", path = "crates/driver-gemini", version = "0.9" }
inceptool_engine = { package = "inceptool-engine", path = "crates/engine", version = "0.1" }
inceptool_protocol = { package = "inceptool-protocol", path = "crates/protocol", version = "0.1" }
inceptool_stages = { package = "inceptool-stages", path = "crates/stages", version = "0.1" }
miette = { version = "7.0", features = ["fancy"] }
regex = "1.10"
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories.workspace = true
inceptool_driver-claude.workspace = true
inceptool_driver-gemini.workspace = true
inceptool_engine.workspace = true
inceptool_protocol.workspace = true
inceptool_stages.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd = "2.2"
insta = { version = "1.48", features = ["json", "redactions"] }
predicates = "3.1"
rstest.workspace = true
tempfile = "3.27"

[workspace.lints.rust]
# Safety — forbid means even #![allow(...)] can't override
unsafe_code = "forbid"
non_ascii_idents = "forbid"

# Quality enforcement
warnings = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unknown_lints = "allow"

# Documentation enforcement
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
unfulfilled_lint_expectations = "deny"

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# All lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }

# Guardrails
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
missing_const_for_fn = "deny"

# Code hygiene
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Async safety
await_holding_lock = "deny"
large_futures = "deny"

# Process and memory safety
exit = "deny"
mem_forget = "deny"

# Performance
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"

# Minimal relaxations
multiple_crate_versions = "allow"   # unavoidable with transitive deps

# Cast lints — too many false positives even for strict projects
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# Nursery lints that have too many false positives
cognitive_complexity = "allow"      # use clippy.toml threshold instead

# Allowed restriction lints
implicit_return = "allow"
arbitrary_source_item_ordering = "allow"
single_char_lifetime_names = "allow"
question_mark_used = "allow"
module_name_repetitions = "allow"
missing_inline_in_public_items = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
pub_use = "allow"
missing_docs_in_private_items = "allow"
single_call_fn = "allow"
wildcard_enum_match_arm = "allow"
shadow_reuse = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
min_ident_chars = "allow"
iter_over_hash_type = "allow"
inline_modules = "allow"
pub_with_shorthand = "allow"
separated_literal_suffix = "allow"
assertions_on_result_states = "allow"

# Denied restriction lints
absolute_paths = "deny"
empty_structs_with_brackets = "deny"
map_err_ignore = "deny"
arithmetic_side_effects = "deny"
pub_without_shorthand = "deny"
str_to_string = "deny"
indexing_slicing = "deny"
tests_outside_test_module = "deny"
redundant_test_prefix = "deny"
pattern_type_mismatch = "allow"
inline_trait_bounds = "deny"
field_scoped_visibility_modifiers = "deny"
as_conversions = "deny"
unused_trait_names = "deny"

[lints]
workspace = true
