[package]
name = "inceptool"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "An extensible LLM agent hook architecture"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agents", "hooks", "ai"]
categories = ["development-tools"]

[workspace]
members = [
  "crates/driver-claude",
  "crates/driver-gemini",
  "crates/engine",
  "crates/parsers",
  "crates/protocol",
  "crates/stages",
]

[workspace.package]
edition = "2024"
authors = ["Mikalai Seva"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asakura/inceptool"

[workspace.dependencies]
assert_cmd = { version = "2.2", default-features = false }
clap = { version = "4.6", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
  "error-context",
] }
directories = { version = "6.0", default-features = false }
fancy-regex = { version = "0.18", default-features = false, features = [
  "perf",
  "unicode",
] }
gix = { version = "0.84", default-features = false, features = [
  "sha1",
  "zlib-rs",
  "blob-diff",
] }
glob = { version = "0.3", default-features = false }
inceptool_driver-claude = { version = "0.9", package = "inceptool-driver-claude", path = "crates/driver-claude" }
inceptool_driver-gemini = { version = "0.9", package = "inceptool-driver-gemini", path = "crates/driver-gemini" }
inceptool_engine = { version = "0.1", package = "inceptool-engine", path = "crates/engine" }
inceptool_parsers = { version = "0.1", package = "inceptool-parsers", path = "crates/parsers" }
inceptool_protocol = { version = "0.1", package = "inceptool-protocol", path = "crates/protocol" }
inceptool_stages = { version = "0.3", package = "inceptool-stages", path = "crates/stages" }
indoc = { version = "2.0", default-features = false }
insta = { version = "1.48", default-features = false, features = [
  "json",
  "redactions",
] }
miette = { version = "7.0", default-features = false, features = ["fancy"] }
predicates = { version = "3.1", default-features = false }
regex = { version = "1.10", default-features = false }
rstest = { version = "0.26", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-saphyr = { version = "0.0", default-features = false, features = [
  "deserialize",
] }
serde_json = { version = "1.0", default-features = false, features = [
  "raw_value",
  "std",
] }
strum = { version = "0.28", default-features = false }
strum_macros = { version = "0.28", default-features = false }
tempfile = { version = "3.27", default-features = false }
thiserror = { version = "2.0", default-features = false }
toml = { version = "1.1", default-features = false, features = [
  "parse",
  "serde",
  "display",
] }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "json",
  "env-filter",
  "fmt",
  "std",
  "registry",
  "ansi",
] }

[workspace.lints.rust]
# Safety — forbid means even #![allow(...)] can't override
unsafe_code = "forbid"
non_ascii_idents = "forbid"

# Quality enforcement
warnings = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unknown_lints = "allow"

# Documentation enforcement
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
unfulfilled_lint_expectations = "deny"

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# All lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }

# Guardrails
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
missing_const_for_fn = "deny"

# Code hygiene
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
format_collect = "deny"

# Async safety
await_holding_lock = "deny"
large_futures = "deny"

# Process and memory safety
exit = "deny"
mem_forget = "deny"

# Performance
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"

# Minimal relaxations
multiple_crate_versions = "allow" # unavoidable with transitive deps

# Cast lints — too many false positives even for strict projects
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# Nursery lints that have too many false positives
cognitive_complexity = "allow" # use clippy.toml threshold instead

# Allowed restriction lints
implicit_return = "allow"
arbitrary_source_item_ordering = "allow"
single_char_lifetime_names = "allow"
question_mark_used = "allow"
module_name_repetitions = "allow"
missing_inline_in_public_items = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
pub_use = "allow"
missing_docs_in_private_items = "allow"
single_call_fn = "allow"
wildcard_enum_match_arm = "allow"
shadow_reuse = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
min_ident_chars = "allow"
iter_over_hash_type = "allow"
inline_modules = "allow"
pub_with_shorthand = "allow"
separated_literal_suffix = "allow"
assertions_on_result_states = "allow"
# Mutually exclusive with self_named_module_files (kept denied); this
# project always uses `foo/mod.rs` for submodules, never sibling `foo.rs`.
mod_module_files = "allow"

# Denied restriction lints
absolute_paths = "deny"
empty_structs_with_brackets = "deny"
map_err_ignore = "deny"
arithmetic_side_effects = "deny"
pub_without_shorthand = "deny"
str_to_string = "deny"
indexing_slicing = "deny"
tests_outside_test_module = "deny"
redundant_test_prefix = "deny"
pattern_type_mismatch = "allow"
inline_trait_bounds = "deny"
field_scoped_visibility_modifiers = "deny"
as_conversions = "deny"
unused_trait_names = "deny"

[dependencies]
clap.workspace = true
directories.workspace = true
gix.workspace = true
inceptool_driver-claude.workspace = true
inceptool_driver-gemini.workspace = true
inceptool_engine.workspace = true
inceptool_protocol.workspace = true
inceptool_stages.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
rstest.workspace = true
tempfile.workspace = true

[build-dependencies]
toml.workspace = true

[profile.dev]
split-debuginfo = "unpacked"
debug = 1
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints]
workspace = true
