[package]
name = "inceptool-corpus-parser"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description = "Parser for the corpus .tests file format used by inceptool-parable"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["parser", "test-corpus"]
categories = ["development-tools::testing"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
