[package]
name = "inceptool-driver-claude"
version = "0.9.2"
edition.workspace = true
authors.workspace = true
description = "Claude driver for Inceptool protocol"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["claude", "driver", "ai"]
categories = ["development-tools"]

[dependencies]
inceptool_protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
