[package]
name = "inceptool-parable"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parable zero-copy context-aware Bash parser"
keywords = ["parser", "bash"]
categories = ["parsing"]

[dependencies]
inceptool_risk-data.workspace = true
miette = { workspace = true, optional = true }
phf = { workspace = true }
regex = { workspace = true, features = ["std"] }
smallvec.workspace = true
thiserror.workspace = true
winnow.workspace = true

[features]
miette = ["dep:miette"]

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
inceptool_corpus-parser.workspace = true
inceptool_risk-data.workspace = true
proc-macro2.workspace = true
quote.workspace = true
thiserror.workspace = true

[lints]
workspace = true
