[package]
name = "inceptool-protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Core protocol definitions for Inceptool"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["protocol", "core", "ai"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerovec.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
