[package]
name = "inceptool-risk-data"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Recursively scans, validates, and code-generates the phf command-risk lookup table inceptool-parable's build script reads"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["security", "schema"]
categories = ["parsing"]

[dependencies]
phf_codegen = { workspace = true, features = ["quote"] }
proc-macro2.workspace = true
quote.workspace = true
regex = { workspace = true, features = ["std"] }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
rstest.workspace = true
syn.workspace = true
tempfile.workspace = true

[lints]
workspace = true
