[package]
name = "inceptool-stages"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "Built-in stages for Inceptool"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["stages", "hooks", "ai"]
categories = ["development-tools"]

[dependencies]
flash.workspace = true
gix.workspace = true
inceptool_engine.workspace = true
inceptool_parsers.workspace = true
inceptool_protocol.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
serde-saphyr.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
